--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-numpy==1.24.2
+numpy==1.23.2
 pandas==1.5.3
 PyQt6==6.5.0
+PyQt6_sip==13.4.1
 pyqtgraph==0.13.3
 scikit_learn==1.2.2
-tensorflow==2.12.0
+tensorflow_macos==2.12.0
